Fix one more misalignement

--- a/app/javascript/styles/modern/glitch-diff.scss
+++ b/app/javascript/styles/modern/glitch-diff.scss
@@ -95,6 +95,7 @@
     margin-left: 30px !important;
   }
   .status__prepend {
+    margin-bottom: 8px !important;
     padding-top: 8px !important;
   }
 
